<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nguyenlinh.firebaseprogramming.HashMapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="28sp"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="96.13"
            android:text="@string/age"
            android:textSize="28sp"/>
        <EditText
            android:id="@+id/edtAge"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.33"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtvcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSetStringvalues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.36"
            android:onClick="saveValues"
            android:text="@string/save"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/btnPutToFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:onClick="setValuesOnFirebaseHasmap"
            android:text="@string/put_to_firebase"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtvStringValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>
</LinearLayout>
